0.1415
  added experimental Validator::Custom::Result to_hash method
  added experimental date_to_timepiece constraint
  added experimental Validator::Custom::Result end_filter method
0.1414
  fixed merge constraint bug
0.1413
  added any constraint
  fixed js_fill_form_button bug
0.1412
  fixed tests
0.1411
  added experimental js_fill_form_button method
0.1410
  fixed negativate constraint bug
  fixed "or" condition constraint function
0.1409
  added space constraint function
0.1408
  updated document
  (experimental) added merge filter
  deprecated shared_rule attribute
  (experimental)improved "or" condition validation syntax
0.1407
  fixed document
0.1406
  updated document
0.1405
  updated document
0.1404
  deprecated calling register_constraint method from class.
  removed the document of deprecated methods
0.1403
  moved documents to Validator::Custom::Guides
0.1402
  added is_valid('ARG') syntax
0.1401
  fixed duprication result value([$value, $value] to $value])
  renamed Validator::Custom::Result::has_missing_param to has_missing
  renamed Validator::Custom::Reuslt::is_valid to is_ok. is_valid is deprecated
  added experimental has_invalid
  removed experimental default_message
  added experimental message option
  adeed experimantal copy option
  added experimental default option
0.1304
  added experimental "Validate::Custom::Result has_missing_param" method
0.1303
  fix missing_params bugs
  added experimental "default_messages" attributes
  depricated "error_infos", "add_error_info", and "remove_error_info"
0.1302
  added experimental "Validator::Custom::Result missing_params" attribute
0.1301
  added experimental negative syntax
0.1211
  fixed document
0.1210
  required Perl 5.008001, enable Carp trust relationship
0.1209
  fixed Carp trust relationship
0.1208
  added the following constraints
    trim
    trim_lead
    trim_trail
    trim_collapse

0.1207
  added the following constraints
    not_defined
    defined
    not_space
    not_blank